log/build_2024-12-05_14-51-30/py_pkg/stderr.log
  File "/home/user/ros2_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/lidar_node.py", line 21
    		self.get_logger().info("lidar node initialized)
    		                       ^
SyntaxError: unterminated string literal (detected at line 21)

